# lattifai-python

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  ERROR_HANDLING.md  FORMAT_TEST_COVERAGE.md  README.md  README_OPTIMIZATION_GUIDE.md  README_OPTIMIZED.md  RELEASE_NOTES.md  _config.yml  api.md  pyproject.toml  setup.py
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  coverage.yml  publish-wheels.yml  release.yml  test-alignment.yml  test.yml  test_uv.yml  wheels.yml
app/: CLI_USAGE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.css  App.tsx  index.css
app/src/components/: AlignmentForm.tsx  ResultsDisplay.tsx  ServerStatus.tsx
app/src/constants/: models.ts
benchmark/: README.md  card.html  eval.py  index.html  speaker_count_metrics.py
benchmark/data/: Introducing_GPT-4o.ass  Introducing_GPT-4o_Gemini.ass  Introducing_GPT-4o_Gemini.md  Introducing_GPT-4o_Gemini3.ass  Introducing_GPT-4o_Gemini3.md  Introducing_GPT-4o_Gemini3_Flash.ass  Introducing_GPT-4o_Gemini3_Flash.md  Introducing_GPT-4o_Gemini3_Flash_LattifAI.ass  Introducing_GPT-4o_Gemini3_LattifAI.ass  Introducing_GPT-4o_Gemini_LattifAI.ass  Introducing_GPT-4o_GroundTruth.ass
demos/: demo_agentic_workflow.py
docs/: generate-palette.py
docs/plans/: 2026-01-15-word-level-export.md
examples/: segmented_alignment_demo.py
scripts/: export_resampler.py  install-hooks.sh  translate.sh
src/lattifai/: __init__.py  __main__.py  _init.py  audio2.py  auth.py  base_client.py  client.py  errors.py  languages.py  log.py  mixin.py  theme.py  types.py  utils.py
src/lattifai/aed/: __init__.py  lattifai.py
src/lattifai/alignment/: __init__.py  _merge.py  lattice1_aligner.py  lattice1_alpha.py  lattice1_worker.py  segmented_aligner.py  segmenter.py  sentence_splitter.py  text_align.py  tokenizer.py
src/lattifai/caption/: GEMINI_README.md  __init__.py  caption.py  reader.py  standardize.py  text_parser.py  utils.py  writer.py
src/lattifai/cli/: __init__.py  _main.py  _shared.py  agent.py  align.py  alignment.py  auth.py  caption.py  config.py  diarization.py  diarize.py  doctor.py  entrypoint.py  podcast.py  serve.html  serve.py  server.py  subtitle.py  summarize.py  transcribe.py  translate.py  update.py  web.py  youtube.py
src/lattifai/config/: __init__.py  aed.py  alignment.py  caption.py  client.py  diarization.py  event.py  llm.py  media.py  podcast.py  subtitle.py  summarization.py  toml_mixin.py  transcription.py  translation.py  workflow.py
src/lattifai/data/: __init__.py  caption.py
src/lattifai/diarization/: lattifai.py  speaker.py
src/lattifai/event/: __init__.py  lattifai.py
tests/: conftest.py  demo_error_handling.py  test_agentic_workflow.py  test_alignment_api.py  test_audio2_loader.py  test_audio_formats.sh  test_basic.py  test_configs.py  test_error_handling.py  test_gemma4.py  test_install_extras.py  test_llm_gemini_client.py  test_safe_print.py  test_source_lang.py  test_special_sentence_resplit.py  test_split_sentences.py  test_transcribe.sh  test_word_level_margin.py
tests/alignment/: test_deduplicate.py  test_lattice1_aligner_id_preserve.py  test_lattice_fail_merge.py  test_punctuation.py  test_tokenize_currency.py  test_tokenizer_difftokenize_split.py  test_tokenizer_errors.py  test_tokenizer_split_threshold.py  test_trust_caption_presplit.py  test_widen_transcript_window.py
tests/caption/: test_ass_karaoke.py  test_caption.py  test_caption_extended.py  test_caption_io.py  test_formats.py  test_formats_registry.py  test_gemini.py  test_karaoke_config.py  test_lrc_format.py  test_metadata_preservation.py  test_multi_speaker_e2e.py  test_nle_readers.py  test_professional_formats.py  test_refactoring_edge_cases.py  test_shift.py  test_speaker_roundtrip.py  test_special_sentence_resplit.py  test_split_sentences.py  test_split_sentences_timing.py  test_standardize.py  test_tabular_formats.py  test_text_parser.py  test_ttml_reader.py  test_ttml_word_timing.py  test_txt_timestamp.py  test_vtt_format.py  test_word_level_integration.py  test_word_level_karaoke_cli.py  test_youtube_vtt.py  test_youtube_vtt_format.py
tests/cli/: test_agent_command.py  test_align_command.py  test_align_timestamps_from_ref.py  test_auth_command.py  test_caption_command.py  test_caption_convert_configs.py  test_cli_integration.py  test_config_command.py  test_diarization_command.py  test_doctor_command.py  test_entrypoint.py  test_serve_mode.py  test_subtitle_command.py  test_summarization_command.py  test_transcribe_command.py  test_translate_command.py  test_update_command.py  test_youtube_command.py
tests/config/: test_alignment_transcription_config.py  test_caption_config.py  test_llm_config.py  test_media_config.py  test_subtitle_config.py  test_toml_mixin.py
tests/data/: DQacCB9tDaw_16K_First05Mins.md  RickAstley_NeverGonnaGiveYouUp.txt  SA1.aac  SA1.aiff  SA1.avi  SA1.flac  SA1.m4a  SA1.mkv  SA1.mov  SA1.opus  SA1.sbv  SA1.srt  SA1.vtt  SA1.webm  SA1_multi_speaker.srt  SA1_multi_speaker.vtt  cprOj8PWepY_transcript.txt
tests/diarization/: test_speaker_inference.py
tests/io/: test_gemini.py  test_special_sentence_resplit.py  test_split_sentences.py  test_text_parser.py  test_transcript.py
tests/mixin/: __init__.py  test_transcribe_save.py
tests/podcast/: test_apple_episode_match.py  test_download_fallback.py
tests/streaming/: test_alignment_streaming.py  test_audio_iterator.py  test_long_audio_loading.py  test_streaming_alignment.py
tests/subtitle/: test_gemini.py  test_shift.py  test_split_sentences.py  test_text_parser.py
tests/summarization/: test_call_llm_retry.py  test_honor_meta_chapters.py
tests/transcription/: test_factory.py  test_gemini_http_timeout.py  test_mlx.py  test_qwen_asr_numpy_input.py  test_transcribe_numpy.py  test_vllm_unit.py
tests/translation/: test_translate_pipeline.py
tests/workflows/: test_agentic_workflow.py  test_file_manager.py
tests/youtube/: test_transcript_extraction.py
(+98 files in other folders)
