[build-system]
requires = ['setuptools>=60,<80', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'lattifai'
version = '1.4.2'
description = "Lattifai Python SDK: Seamless Integration with Lattifai's Speech and Video AI Services"
keywords = ['lattifai', 'speech recognition', 'video analysis', 'ai', 'sdk', 'api client']
readme = 'README.md'
license = {file = 'LICENSE'}
authors = [
  { name = 'Lattifai Technologies', email = 'tech@lattifai.com' },
]
maintainers = [
  { name = 'Lattice', email = 'tech@lattifai.com' },
]
requires-python = '>=3.10,<3.15'

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Topic :: Multimedia :: Sound/Audio',
    'Topic :: Multimedia :: Video',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

dependencies = [
    "python-dotenv",
    "colorful>=0.5.6",
    "lattifai-run>=1.0.2",
    "lattifai-core>=0.7.0",
    "lattifai-captions[splitting]>=0.2.2",
    "g2p-phonemizer>=0.4.0",
    "error-align-fix>=0.1.4",
    "k2py==0.2.4",
    "onnxruntime",
    "soundfile",
    "av",
    "msgpack",
    "google-genai>=1.22.0",
    "questionary>=2.0",
    "yt-dlp",
    "pycryptodome",
]

[project.optional-dependencies]
# Event
event = [
    "lattifai-core[event]>=0.7.0",
]
# Diarization
diarization = [
    "lattifai-core[diarization]>=0.7.0",
]
# Transcription: ASR models (inlined, no lattifai_core.transcription dependency)
transcription = [
    "nemo-toolkit-asr[asr]==2.8.0rc2",
    "OmniSenseVoice>=0.4.2",
    "torch",
]
# Development
dev = [
    "black",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]
# All: install everything
all = [
    "lattifai[event]",
    "lattifai[diarization]",
    "lattifai[transcription]",
    "lattifai[youtube]",
]


[project.urls]
Homepage = 'https://github.com/lattifai/lattifai-python'
Documentation = 'https://github.com/lattifai/lattifai-python/blob/main/README.md'
'Bug Tracker' = 'https://github.com/lattifai/lattifai-python/issues'
Discussions = 'https://github.com/lattifai/lattifai-python/discussions'
Changelog = 'https://github.com/lattifai/lattifai-python/blob/main/CHANGELOG.md'

[project.scripts]
"lai-align" = "lattifai.cli.alignment:main"
"lai-youtube" = "lattifai.cli.youtube:main"
"lai-transcribe" = "lattifai.cli.transcribe:main"
"lai-diarize" = "lattifai.cli.diarization:main"
"laicap-convert" = "lattifai.cli.caption:main_convert"
"laicap-normalize" = "lattifai.cli.caption:main_normalize"
"laicap-shift" = "lattifai.cli.caption:main_shift"
"laicap-diff" = "lattifai.cli.caption:main_diff"

[project.entry-points."lai_run.cli"]
alignment = "lattifai.cli"
caption = "lattifai.cli"
transcribe = "lattifai.cli"
diarization = "lattifai.cli"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
exclude = ["lattifai.caption", "lattifai.caption.*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"lattifai.transcription.prompts" = ["**/*.txt", "**/*.md"]
"lattifai.data.resamplers" = ["*.onnx"]

[tool.pytest.ini_options]
addopts = "--durations=10"
testpaths = ["tests"]

[tool.uv]
extra-index-url = ["https://lattifai.github.io/pypi/simple/"]
