[build-system]
requires = ['setuptools>=60,<80', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'lattifai'
version = '1.5.10'
description = "Lattifai Python SDK: Seamless Integration with Lattifai's Speech and Video AI Services"
keywords = ['lattifai', 'speech recognition', 'video analysis', 'ai', 'sdk', 'api client']
readme = 'README.md'
license = {file = 'LICENSE'}
authors = [
  { name = 'Lattifai Technologies', email = 'tech@lattifai.com' },
]
maintainers = [
  { name = 'Lattice', email = 'tech@lattifai.com' },
]
requires-python = '>=3.10,<3.15'

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Topic :: Multimedia :: Sound/Audio',
    'Topic :: Multimedia :: Video',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]

dependencies = [
    "python-dotenv>=1.2.2",
    "colorful>=0.5.8",
    "lattifai-run>=1.0.4",
    "lattifai-core>=0.7.6",
    "lattifai-captions[splitting]>=0.4.15",
    "g2p-phonemizer>=0.4.2",
    "error-align-fix>=0.1.4",
    "k2py==0.4.0",
    "onnxruntime>=1.26.0",
    "soundfile>=0.13.1",
    "av>=17.0.1",
    "msgpack>=1.1.2",
    "google-genai>=2.2.0",
    "questionary>=2.1.1",
    "yt-dlp>=2026.3.17",
    "pycryptodome>=3.23.0",
    "tomlkit>=0.15.0",
    "lattifai-auth>=0.3.0",
]

[project.optional-dependencies]
# Event
event = [
    "lattifai-core[event]>=0.7.6",
]
# Diarization
diarization = [
    "lattifai-core[diarization]>=0.7.6",
]
# Transcription: ASR models (NeMo/SenseVoice/FunASR, Linux/CUDA focused)
transcription = [
    "nemo-toolkit-asr[asr]==2.8.0rc2",
    "OmniSenseVoice>=0.4.2",
    "funasr>=1.3.1",
    "zhconv",
]
# Development
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
]
# All: install everything
translation = ["openai>=2.36.0"]
# MLX: Apple Silicon in-process inference (macOS only, separate from transcription due to protobuf conflict)
mlx = [
    "mlx-audio>=0.4.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-vlm>=0.5.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "webrtcvad>=2.0.10; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
all = [
    "lattifai[event]",
    "lattifai[diarization]",
    "lattifai[transcription]",
    "lattifai[translation]",
]


[project.urls]
Homepage = 'https://github.com/lattifai/lattifai-python'
Documentation = 'https://github.com/lattifai/lattifai-python/blob/main/README.md'
'Bug Tracker' = 'https://github.com/lattifai/lattifai-python/issues'
Discussions = 'https://github.com/lattifai/lattifai-python/discussions'
Changelog = 'https://github.com/lattifai/lattifai-python/blob/main/CHANGELOG.md'

[project.scripts]
"lai" = "lattifai.cli._main:main"
"lai-align" = "lattifai.cli.alignment:main"
"lai-youtube" = "lattifai.cli.youtube:main"
"lai-transcribe" = "lattifai.cli.transcribe:main"
"lai-diarize" = "lattifai.cli.diarize:main"
"laicap-convert" = "lattifai.cli.caption:main_convert"
"laicap-normalize" = "lattifai.cli.caption:main_normalize"
"laicap-shift" = "lattifai.cli.caption:main_shift"
"laicap-diff" = "lattifai.cli.caption:main_diff"
"lai-translate" = "lattifai.cli.translate:main"
"lai-serve" = "lattifai.cli.serve:main"
"lai-update" = "lattifai.cli.update:main"
"lai-doctor" = "lattifai.cli.doctor:main"
"lai-summarize" = "lattifai.cli.summarize:main"

[project.entry-points."lai_run.cli"]
alignment = "lattifai.cli"
caption = "lattifai.cli"
transcribe = "lattifai.cli"
diarize = "lattifai.cli"
translate = "lattifai.cli"
youtube = "lattifai.cli"
serve = "lattifai.cli"
summarize = "lattifai.cli"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
exclude = ["lattifai.caption", "lattifai.caption.*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"lattifai.transcription.prompts" = ["**/*.txt", "**/*.md"]
"lattifai.data.resamplers" = ["*.onnx"]
"lattifai.data.selftest" = ["*.wav", "*.vtt", "*.srt"]
"lattifai.translation" = ["**/*.yaml", "**/*.md"]
"lattifai.cli" = ["serve.html"]

[tool.pytest.ini_options]
addopts = "--durations=10"
testpaths = ["tests"]

[tool.uv]
extra-index-url = ["https://lattifai.github.io/pypi/simple/"]

# mlx extra conflicts with all/transcription due to protobuf version mismatch:
# mlx-audio requires protobuf>=6.33.5, nemo-toolkit-asr requires protobuf<5.30
conflicts = [
    [
        { extra = "mlx" },
        { extra = "all" },
    ],
    [
        { extra = "mlx" },
        { extra = "transcription" },
    ],
    [
        { extra = "mlx" },
        { extra = "diarization" },
    ],
]
